...
    
    //MARK: TIMER
    
    @IBAction func startTimer(_ sender: UIButton) {
        
        if ProjectTimer.sharedInstance.isTimerRunning() {
            let alert = UIAlertController(title: "Time is already running", message: "Oops! A timer is already running in \(ProjectTimer.sharedInstance.projectName), you can only have one timer running at a given time", preferredStyle: UIAlertControllerStyle.alert)
            alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: nil))
            self.present(alert, animated: true, completion: nil)
        } else {
            //When the user select start
            // create an item in the database and set the start_time to timeIntervalSince1970, project name and is_task_running to true
            let start_time = Date()
            let project_name = self.project_name
...
